# telemetry-systems-lab

./: .clang-tidy  .dockerignore  .env  .gitignore  AGENTS.md  CMakeLists.txt  DOCS_UX.md  Dockerfile  INVESTIGATION_REPORT.md  Makefile  README.md  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
artifacts/pca/default/: model.json
dart_cli/: pubspec.yaml
db/: init.sql
db/migrations/: 20260127_add_analytics.sql  20260128_add_score_job_progress.sql  20260129_add_request_id_to_jobs.sql  20260129_retention_policy.sql  20260204_add_training_config_to_model_runs.sql  20260205_add_best_trial_to_model_runs.sql  20260205_add_hpo_to_model_runs.sql  20260205_add_selection_metadata_to_model_runs.sql  20260206_add_hpo_audit_metadata.sql  20260206_add_hpo_error_metadata.sql  20260206_add_selection_metric_provenance.sql  20260207_add_updated_at_to_jobs.sql
docs/: observability.md  production_hardening.md
proto/: telemetry.proto
python/training/: export_utils.py  requirements.txt  train_pca.py
scripts/: smoke_test_api.sh
src/: alert_manager.cpp  alert_manager.h  api_debug.h  api_main.cpp  api_response_meta.h  api_server.cpp  api_server.h  benchmark_main.cpp  contract.h  db_client.cpp  db_client.h  db_connection_manager.cpp  db_connection_manager.h  detector_config.h  generator.cpp  generator.h  idb_client.h  job_manager.cpp  job_manager.h  job_reconciler.cpp  job_reconciler.h  job_state_machine.cpp  job_state_machine.h  main.cpp  metrics.h  pagination.h  pca_model_cache.cpp  pca_model_cache.h  preprocessing.cpp  preprocessing.h  route_registry.cpp  route_registry.h  scorer_main.cpp  server.cpp  server.h  time_resolution.h  types.h
src/detectors/: detector_a.cpp  detector_a.h  pca_model.cpp  pca_model.h
src/linalg/: matrix.cpp  matrix.h
src/obs/: context.h  error_codes.h  http_log.h  logging.h  metrics.h
src/training/: pca_trainer.cpp  pca_trainer.h  telemetry_iterator.cpp  telemetry_iterator.h  train_pca_main.cpp
tests/: client.cpp  http_test_utils.h  unit_tests.cpp
tests/integration/: test_api_health.cpp  test_api_routes.cpp  test_db_client.cpp  test_metrics.cpp  test_training_validation.cpp
tests/mocks/: mock_db_client.h
tests/parity/: generate_golden.py  test_parity_b.cpp
tests/parity/golden/: parity_b.json  test_pca_model.json
tests/unit/: test_alert_manager.cpp  test_api_debug.cpp  test_api_performance.cpp  test_api_response_meta.cpp  test_api_safety.cpp  test_api_scoring.cpp  test_contract.cpp  test_db_client_security.cpp  test_db_connection_pool.cpp  test_detector_a.cpp  test_error_classification.cpp  test_generator.cpp  test_generator_lifecycle.cpp  test_hardening_scaffolding.cpp  test_job_manager.cpp  test_job_reconciler.cpp  test_job_state_machine.cpp  test_linalg.cpp  test_obs_context.cpp  test_obs_metrics.cpp  test_pagination.cpp  test_pca_model_cache.cpp  test_pca_trainer.cpp  test_preprocessing.cpp  test_route_registry.cpp  test_server.cpp  test_telemetry_iterator.cpp  test_time_parsing.cpp  test_time_resolution.cpp
web_ui/: README.md  pubspec.yaml
web_ui/lib/: main.dart
web_ui/lib/screens/: compare_models_screen.dart  control_panel.dart  dataset_analytics_screen.dart  inference_history_screen.dart  models_screen.dart  runs_screen.dart  scoring_results_screen.dart
web_ui/lib/services/: telemetry_service.dart
web_ui/lib/state/: app_state.dart  investigation_context.dart
web_ui/lib/utils/: freshness.dart  share_link.dart  time_buckets.dart  verbose_mode_storage.dart  verbose_mode_storage_stub.dart  verbose_mode_storage_web.dart  verbose_steps.dart
web_ui/lib/widgets/: analytics_debug_panel.dart  analytics_state_panel.dart  charts.dart  context_bar.dart  copy_share_link_button.dart  inline_alert.dart  verbose_stepper.dart
web_ui/test/: analytics_debug_panel_test.dart  analytics_state_panel_test.dart  chart_card_test.dart  chart_tooltip_test.dart  compare_mode_test.dart  context_bar_test.dart  copy_share_link_button_test.dart  filter_chips_test.dart  freshness_logic_test.dart  hpo_ux_enhanced_test.dart  hpo_ux_test.dart  inference_handoff_test.dart  partial_data_test.dart  records_browser_test.dart  response_meta_test.dart  share_link_test.dart  telemetry_service_test.dart  time_buckets_test.dart  training_config_test.dart  verbose_stepper_test.dart  widget_test.dart
web_ui/web/: index.html
